[package]
name = "solana-mev-detector-simple"
version = "0.2.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
config = { version = "0.13", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.10"
bs58 = "0.4"